<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.imagecaptiongenerator.ui.logout.Logout_Fragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout__fragment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.imagecaptiongenerator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.imagecaptiongenerator.ui.info.Info_Fragment"
        android:label="@string/menu_info"
        tools:layout="@layout/info__fragment" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.imagecaptiongenerator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.imagecaptiongenerator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>